# roop

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yaml  main.py  postman_collection.json  pyproject.toml  weather-forecast.json
alembic/: env.py
alembic/versions/: 1ac46f16a216_create_tasks_table.py  45c41f68dec1_add_duration_hours_to_tasks.py  ccdcbd31fdd2_add_predecessor_id_to_tasks.py
app/: __init__.py  config.py  database.py  main,py  main.py
app/models/: __init__.py  base.py  task.py  weather.py
app/schemas/: __init__.py  base.py  task.py  weather.py  wow.py
app/services/: task.py  weather.py  wow.py
system_design/: system_design.md
tests/: test_unit.py
